<resources>
    <string name="app_name">Foto Diary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>



    <string name="menu_item_home">Home</string>
    <string name="menu_item_new_album">New Album</string>
    <string name="menu_item_gallery">Gallery</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_feedback">Feedback</string>
    <string name="menu_item_help">Help</string>

    <string name="album.title">Title</string>
    <string name="album.location">Location</string>
    <string name="album.description">Description</string>

    <string name="foto.diary.cancel">Cancel</string>
    <string name="activity.create.album.button.text">Create Album</string>


</resources>
