<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_item_home" />
        <item
            android:id="@+id/new_album"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_item_new_album" />
        <item
            android:id="@+id/gallery"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_item_gallery" />



    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_item_settings" />
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_item_feedback" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_item_help" />

        </group>


</menu>
